test/tests/stages/15_arrays_and_pointer_arithmetic/valid/libraries/return_pointer_to_array_client.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_row
        List[2]: 
          TIdentifier: arr
          TIdentifier: idx
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Pointer: 
              Array: 
                TLong: 3
                Array: 
                  TLong: 4
                  Long: 
            Int: 
          Pointer: 
            Array: 
              TLong: 4
              Long: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: nested_array
                  CCompoundInit: 
                    List[2]: 
                      CCompoundInit: 
                        List[1]: 
                          CCompoundInit: 
                            List[1]: 
                              CSingleInit: 
                                CConstant: 
                                  CConstInt: 
                                    TInt: 0
                                  None: 
                                None: 
                            None: 
                        None: 
                      CCompoundInit: 
                        List[2]: 
                          CCompoundInit: 
                            List[4]: 
                              CSingleInit: 
                                CUnary: 
                                  CNegate: 
                                  CConstant: 
                                    CConstInt: 
                                      TInt: 12
                                    None: 
                                  None: 
                                None: 
                              CSingleInit: 
                                CUnary: 
                                  CNegate: 
                                  CConstant: 
                                    CConstInt: 
                                      TInt: 13
                                    None: 
                                  None: 
                                None: 
                              CSingleInit: 
                                CUnary: 
                                  CNegate: 
                                  CConstant: 
                                    CConstInt: 
                                      TInt: 14
                                    None: 
                                  None: 
                                None: 
                              CSingleInit: 
                                CUnary: 
                                  CNegate: 
                                  CConstant: 
                                    CConstInt: 
                                      TInt: 15
                                    None: 
                                  None: 
                                None: 
                            None: 
                          CCompoundInit: 
                            List[1]: 
                              CSingleInit: 
                                CUnary: 
                                  CNegate: 
                                  CConstant: 
                                    CConstInt: 
                                      TInt: 16
                                    None: 
                                  None: 
                                None: 
                            None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 2
                    Array: 
                      TLong: 3
                      Array: 
                        TLong: 4
                        Long: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: row_pointer
                  CSingleInit: 
     