test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/conflicting_function_declarations.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: f
        List[1]: 
          TIdentifier: arr
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Array: 
              TLong: 2
              Array: 
                TLong: 3
                Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: f
        List[1]: 
          TIdentifier: arr
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Array: 
              TLong: 2
              Array: 
                TLong: 4
                Int: 
          Int: 
        None: 
